# SolNFT

./: Cargo.toml
src/: error.rs  instruction.rs  processor.rs  state.rs
tests/: merger_test.rs
